<resources>
    <string name="app_name">ECommerce</string>
    <string name="textview">TextView</string>
    <string name="aexpress">aExpress</string>
    <string name="search_here">Search here</string>
    <string name="loading_details">Loading details...</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="e_commerce">E Commerce</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="vastra">Vastra</string>
    <string name="product_name">Product Name</string>
    <string name="qty">Qty:</string>
    <string name="_0">0</string>
    <string name="_649">649</string>
    <string name="continue_">Continue</string>
    <string name="subtotal">Subtotal</string>
    <string name="without_taxes">(without taxes)</string>
    <string name="developed_by_nrudera_pratap_singh">Developed By\nRudera Pratap Singh</string>
    <string name="_1">1</string>
    <string name="__">-</string>
    <string name="___">+</string>
    <string name="save">Save</string>
    <string name="off">OFF</string>
    <string name="checkout">Checkout</string>
    <string name="cost_details">Cost Details</string>
    <string name="you_may_also_like">You May Also Like</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="_11">11%</string>
    <string name="information">Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="date_shipping">Date Shipping</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="product_order_list">Product Order List</string>
    <string name="_0_">0%</string>
    <string name="process_checkout">Process checkout</string>
    <string name="payment">Payment</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="developed_by">Developed By</string>
    <string name="create_account">Create Account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="or_nsign_up_with">or\nSign Up With</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="rudera">Rudera</string>
    <string name="r">₹</string>
    <string name="default_web_client_id">default_web_client_id</string>
</resources>