<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/open_sans_samibold"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:textColor="#757778"
                android:maxLines="1"
                android:maxWidth="280dp"
                android:text="@string/product_name"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#2196F3"
                android:text="@string/_0"
                android:textSize="14sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_second"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#EAEBF0"
                android:orientation="horizontal"
                android:layout_below="@+id/product_stock"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:text="@string/__"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:backgroundTint="@color/yellow"
                    android:layout_gravity="center_vertical"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:textColor="#096EBD"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:text="@string/___"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:backgroundTint="@color/yellow"
                    android:layout_gravity="center_vertical"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/layout_second"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="14sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>