<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:layout_margin="10dp"
        android:elevation="10dp">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/cart_image"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    app:riv_corner_radius="7dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demo_img"/>

              <RelativeLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vastra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vastra"
                    android:fontFamily="@font/open_sans_samibold"
                    android:textColor="#353535"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"/>

                  <com.airbnb.lottie.LottieAnimationView
                      android:id="@+id/animation"
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:layout_marginTop="28dp"
                      app:lottie_rawRes="@raw/animation"
                      app:lottie_loop="true"
                      android:layout_marginStart="5dp"
                      android:layout_toRightOf="@+id/vastra"
                      app:lottie_autoPlay="true"/>

                  <androidx.appcompat.widget.AppCompatTextView
                      android:id="@+id/cart_name"
                      android:layout_marginTop="10dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/vastra"
                      android:maxLines="1"
                      android:ellipsize="end"
                      android:fontFamily="@font/open_sans_samibold"
                      android:text="@string/product_name"
                      android:textSize="16sp"/>

                  <androidx.appcompat.widget.AppCompatImageView
                      android:id="@+id/cancel"
                      android:layout_width="15dp"
                      android:layout_height="15dp"
                      android:layout_alignParentTop="true"
                      android:layout_alignParentEnd="true"
                      android:layout_marginStart="10dp"
                      android:layout_marginTop="10dp"
                      android:layout_marginEnd="10dp"
                      android:layout_marginBottom="10dp"
                      android:src="@drawable/cancel" />

                  <androidx.cardview.widget.CardView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:backgroundTint="#EAEBF0"
                      android:layout_marginTop="25dp"
                      android:layout_marginBottom="10dp"
                      android:id="@+id/card_text"
                      android:layout_below="@+id/cart_name"
                      app:cardCornerRadius="5dp">

                      <androidx.appcompat.widget.LinearLayoutCompat
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:padding="3dp"
                          android:orientation="horizontal">

                          <androidx.appcompat.widget.AppCompatTextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/qty"
                              android:fontFamily="@font/open_sans_samibold"
                              android:textSize="16sp"
                              android:textColor="#2196F3"/>

                          <androidx.appcompat.widget.AppCompatTextView
                              android:id="@+id/cart_quantity"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/_0"
                              android:textSize="16sp"
                              android:fontFamily="@font/open_sans_samibold"
                              android:layout_marginStart="2dp"
                              android:textColor="#096EBD"/>
                      </androidx.appcompat.widget.LinearLayoutCompat>
                  </androidx.cardview.widget.CardView>

                  <androidx.appcompat.widget.LinearLayoutCompat
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/cart_name"
                      android:layout_marginTop="30dp"
                      android:layout_marginBottom="10dp"
                      android:layout_marginEnd="10dp"
                      android:layout_marginStart="10dp"
                      android:layout_alignParentEnd="true"
                      android:orientation="horizontal">

                      <androidx.appcompat.widget.AppCompatTextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/r"
                          android:textColor="#353535"
                          android:textSize="17sp"
                          android:fontFamily="@font/open_sans_samibold"
                          android:layout_marginEnd="2dp"
                          android:layout_gravity="center_vertical"
                          android:src="@drawable/rupee"/>

                      <androidx.appcompat.widget.AppCompatTextView
                          android:id="@+id/cart_price"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/_649"
                          android:fontFamily="@font/open_sans_samibold"
                          android:textColor="#353535"
                          android:layout_gravity="center_vertical"
                          android:textSize="17sp"/>
                  </androidx.appcompat.widget.LinearLayoutCompat>

              </RelativeLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

        

    </androidx.cardview.widget.CardView>

</RelativeLayout>