<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="280dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:padding="7dp"
                android:scaleType="centerCrop"
                android:src="@drawable/demo_img"
                app:riv_corner_radius="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/open_sans_samibold"
                android:maxLines="1"
                android:text="@string/textview"
                android:textColor="#353535"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/open_sans_samibold"
                    android:src="@drawable/rupee"
                    android:text="@string/r"
                    android:textColor="@color/black"
                    android:textSize="10sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans_samibold"
                    android:maxLines="1"
                    android:text="000"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/off"
                        android:fontFamily="@font/open_sans_samibold"
                        android:textColor="@color/green"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/off"
                        android:fontFamily="@font/open_sans_samibold"
                        android:maxLength="6"
                        android:text="69%"
                        android:textColor="@color/green"
                        android:textSize="12sp" />

                </RelativeLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</RelativeLayout>